--- a/package.json
+++ b/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "hexagonal-express-ts",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "clean": "rm -rf dist",
-    "lint": "echo \"(opcional) Agregá ESLint aquí si querés :)\""
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.21.2"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.13.14",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.2"
-  }
+	"name": "hexagonal-express-ts",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"dev": "NODE_ENV=development ts-node-dev --respawn src/index.ts",
+		"build": "tsc",
+		"start": "NODE_ENV=production node dist/index.js",
+		"clean": "rm -rf dist",
+		"lint": "echo \"(opcional) Agregá ESLint aquí si querés :)\""
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"dotenv": "^16.4.7",
+		"express": "^4.21.2",
+		"mysql2": "^3.14.0",
+		"reflect-metadata": "^0.2.2",
+		"sequelize": "^6.37.7",
+		"sequelize-typescript": "^2.1.6",
+		"tsyringe": "^4.8.0"
+	},
+	"devDependencies": {
+		"@types/express": "^5.0.1",
+		"@types/node": "^22.13.14",
+		"@types/sequelize": "^4.28.20",
+		"ts-node-dev": "^2.0.0",
+		"typescript": "^5.8.2"
+	}
 }
